{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 84,
  "lineage": "cb2afa7e-539a-8cad-f7a9-bbd990791b6a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e34b8c2a177c55d",
            "arn": "arn:aws:ec2:us-east-1:961653683111:elastic-ip/eipalloc-03e34b8c2a177c55d",
            "association_id": "eipassoc-0ecd62cc781a076dd",
            "domain": "vpc",
            "id": "eipalloc-03e34b8c2a177c55d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04181ef8abe7b041f",
            "private_dns": "ip-192-168-58-103.ec2.internal",
            "private_ip": "192.168.58.103",
            "public_dns": "ec2-54-88-196-137.compute-1.amazonaws.com",
            "public_ip": "54.88.196.137",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022c0ff3509045a8d",
            "arn": "arn:aws:ec2:us-east-1:961653683111:elastic-ip/eipalloc-022c0ff3509045a8d",
            "association_id": "eipassoc-04ef23a93ac7cbee4",
            "domain": "vpc",
            "id": "eipalloc-022c0ff3509045a8d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0866e914b7def31e5",
            "private_dns": "ip-192-168-77-168.ec2.internal",
            "private_ip": "192.168.77.168",
            "public_dns": "ec2-54-85-46-19.compute-1.amazonaws.com",
            "public_ip": "54.85.46.19",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:internet-gateway/igw-0fc0e412c66dfe270",
            "id": "igw-0fc0e412c66dfe270",
            "owner_id": "961653683111",
            "vpc_id": "vpc-00db8b145962d7b11"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e34b8c2a177c55d",
            "association_id": "eipassoc-0ecd62cc781a076dd",
            "connectivity_type": "public",
            "id": "nat-08eba71566e99288e",
            "network_interface_id": "eni-04181ef8abe7b041f",
            "private_ip": "192.168.58.103",
            "public_ip": "54.88.196.137",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fcdce833d2e65b4d",
            "tags": {
              "Name": "eks-NatGatewayAZ1"
            },
            "tags_all": {
              "Name": "eks-NatGatewayAZ1"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_1",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022c0ff3509045a8d",
            "association_id": "eipassoc-04ef23a93ac7cbee4",
            "connectivity_type": "public",
            "id": "nat-004092fb65886c54b",
            "network_interface_id": "eni-0866e914b7def31e5",
            "private_ip": "192.168.77.168",
            "public_ip": "54.85.46.19",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-080cb2e4cfb2b46f2",
            "tags": {
              "Name": "eks-NatGatewayAZ2"
            },
            "tags_all": {
              "Name": "eks-NatGatewayAZ2"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_2",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-081abd0ffb134fa9b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08eba71566e99288e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-081abd0ffb134fa9b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_1",
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.private01",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09d700231bdb509b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-004092fb65886c54b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09d700231bdb509b3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_2",
            "aws_nat_gateway.nat_gateway_2",
            "aws_route_table.private02",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fc0e412c66dfe270",
            "id": "r-rtb-0d266e8283fee03061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d266e8283fee0306",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:route-table/rtb-081abd0ffb134fa9b",
            "id": "rtb-081abd0ffb134fa9b",
            "owner_id": "961653683111",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08eba71566e99288e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Subnet AZ1",
              "Network": "Private01"
            },
            "tags_all": {
              "Name": "Private Subnet AZ1",
              "Network": "Private01"
            },
            "timeouts": null,
            "vpc_id": "vpc-00db8b145962d7b11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:route-table/rtb-09d700231bdb509b3",
            "id": "rtb-09d700231bdb509b3",
            "owner_id": "961653683111",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-004092fb65886c54b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Subnet AZ2",
              "Network": "Private02"
            },
            "tags_all": {
              "Name": "Private Subnet AZ2",
              "Network": "Private02"
            },
            "timeouts": null,
            "vpc_id": "vpc-00db8b145962d7b11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:route-table/rtb-0d266e8283fee0306",
            "id": "rtb-0d266e8283fee0306",
            "owner_id": "961653683111",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc0e412c66dfe270",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnets",
              "Network": "Public"
            },
            "tags_all": {
              "Name": "Public Subnets",
              "Network": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00db8b145962d7b11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef4bbc28f1ba249c",
            "route_table_id": "rtb-081abd0ffb134fa9b",
            "subnet_id": "subnet-0b8098483c0f4f174"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022dea77d0c382658",
            "route_table_id": "rtb-09d700231bdb509b3",
            "subnet_id": "subnet-08643f0c5bee99bbb"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026f8903b85c3cbd0",
            "route_table_id": "rtb-0d266e8283fee0306",
            "subnet_id": "subnet-0fcdce833d2e65b4d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0165e8083cac4ab4c",
            "route_table_id": "rtb-0d266e8283fee0306",
            "subnet_id": "subnet-080cb2e4cfb2b46f2"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:security-group/sg-0ee17768537c392fd",
            "description": "Cluster communication with worker nodes",
            "egress": [],
            "id": "sg-0ee17768537c392fd",
            "ingress": [],
            "name": "eks-control-plane-20240901200947828800000004",
            "name_prefix": "eks-control-plane-",
            "owner_id": "961653683111",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00db8b145962d7b11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:subnet/subnet-0b8098483c0f4f174",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8098483c0f4f174",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961653683111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-PrivateSubnet01",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-PrivateSubnet01",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00db8b145962d7b11"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:subnet/subnet-08643f0c5bee99bbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08643f0c5bee99bbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961653683111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-PrivateSubnet02",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-PrivateSubnet02",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00db8b145962d7b11"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:subnet/subnet-0fcdce833d2e65b4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcdce833d2e65b4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961653683111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-PublicSubnet01",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-PublicSubnet01",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00db8b145962d7b11"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:subnet/subnet-080cb2e4cfb2b46f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080cb2e4cfb2b46f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961653683111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-PublicSubnet02",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-PublicSubnet02",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00db8b145962d7b11"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:vpc/vpc-00db8b145962d7b11",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-073f9398a144e259f",
            "default_route_table_id": "rtb-07c54dbd7cae638db",
            "default_security_group_id": "sg-09951186c026a3418",
            "dhcp_options_id": "dopt-0d8e2277",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00db8b145962d7b11",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c54dbd7cae638db",
            "owner_id": "961653683111",
            "tags": {
              "Name": "eks-VPC"
            },
            "tags_all": {
              "Name": "eks-VPC"
            }
          }
        }
      ]
    }
  ]
}